--- a/neoforge/neoforge.mods.toml
+++ b/neoforge/neoforge.mods.toml
@@ -1,6 +1,6 @@
 modLoader = "javafml"
 loaderVersion = "[1,)"
-issueTrackerURL = "https://github.com/CerealCamera/Aviator-Dreams/issues"
+issueTrackerURL = "https://github.com/CerealCamera/Aviator-Dreams-Reloaded/issues"
 license = "GPL-3.0-only"
 
 [[mods]]
@@ -9,9 +9,9 @@ version = "${version}"
 displayName = "Aviator Dreams"
 displayURL = ""
 authors = "CerealCamera"
-description = "Addon for Immersive Aircraft aimed at adding realistic aircraft."
+description = "An Add-On aimed at adding real life airliners to the game."
 logoFile = "icon.png"
-itemIcon = "aviator_dream:dehavilland_dh106"
+itemIcon = "aviator_dream:douglas_dc1"
 
 [[dependencies.aviator_dream]]
 modId = "minecraft"
