--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,22 +1,51 @@
-name: Build
+
+name: Aviator Dreams Reloaded Build Script
 
 on:
-  push:
+  push: {}
+  pull_request: {}
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout sources
-      uses: actions/checkout@v4
-    - name: Setup Java
-      uses: actions/setup-java@v4
+    - uses: actions/checkout@v4
       with:
-        distribution: 'temurin'
+        fetch-depth: 0
+        submodules: true
+
+    - name: Set up JDK 21
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'zulu'
         java-version: 21
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4
-    - name: Make gradlew executable
+        java-package: jdk
+
+    - name: Install required dependencies
+      run: sudo apt update && sudo apt install libtinfo5
+
+    - name: Grant execute permission to gradlew
       run: chmod +x ./gradlew
-    - name: Build with Gradle
-      run: ./gradlew build
+    
+    - uses: actions/cache@v4
+      with:
+        path: |
+          ~/.gradle/caches
+          ~/.gradle/wrapper
+          ./.gradle/loom-cache
+        key: ${{ runner.os }}-gradle4-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+        restore-keys: |
+          ${{ runner.os }}-gradle4-
+        
+    - name: Build
+      run: |
+        ./gradlew clean build --stacktrace
+
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: aviator-dreams-reloaded-artifact
+        path: 'build/libs/*.jar'
+      
