--- a/common/build.gradle
+++ b/common/build.gradle
@@ -7,16 +7,5 @@ dependencies {
 }
 
 architectury {
-    common("fabric", "neoforge")
-}
-
-publishing {
-    publications {
-        mavenCommon(MavenPublication) {
-            artifactId = rootProject.archives_base_name
-            groupId = rootProject.group_id
-            version = version + "+common"
-            from components.java
-        }
-    }
+    common("fabric", "forge")
 }
