--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,25 @@
+org.gradle.jvmargs=-Xmx6G
 
-org.gradle.jvmargs=-Xmx1G
+enabled_platforms=fabric, forge
 
-minecraft_version=1.21.1
+minecraft_version=1.20.1
+parchment_version=2023.09.03
 
-archives_base_name=aviator_dream
 group_id=net.cerealcamera
+archives_base_name=aviator_dreams
 
-architectury_version=${ARCHITECTURY_API_VERSION}
+fabric_loader_version=0.15.9
+fabric_api_version=0.83.1+1.20.1
 
-fabric_loader_version=0.16.14
-fabric_api_version=0.116.4
+cloth_version=11.0.99
+mod_menu_version=7.0.1
 
-neoforge_version=21.1.194
+forge_version=47.0.3
 
-immersive_aircraft_version=1.3.3+1.21.1
+jei_version=15.2.0.27
+rei_version=12.0.684
+
+ad_astra_version=1.15.18
+immersive_aircraft_version=1.3.3+1.20.1
+man_of_many_planes_version=1.20.1-SNAPSHOT
+immersive_machinery=1.20.1-SNAPSHOT
