--- a/settings.gradle
+++ b/settings.gradle
@@ -2,12 +2,13 @@ pluginManagement {
     repositories {
         maven { url "https://maven.fabricmc.net/" }
         maven { url "https://maven.architectury.dev/" }
-        maven { url "https://maven.neoforged.net/releases/" }
-        maven { url "https://modmaven.dev/" }
+        maven { url "https://maven.minecraftforge.net/" }
+        maven { url "https://maven.shedaniel.me/" }
+        maven { url "https://maven.terraformersmc.com/releases/" }
         gradlePluginPortal()
     }
 }
 
 include("common")
 include("fabric")
-include("neoforge")
+include("forge")
