--- a/forge/mods.toml
+++ b/forge/mods.toml
@@ -31,5 +31,5 @@ side = "BOTH"
 modId = "immersive_aircraft"
 mandatory = true
 versionRange = "[1.1.0,)"
-ordering = "NONE"
+ordering = "AFTER"
 side = "BOTH"
