--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx6G
 enabled_platforms=fabric, forge
 
 minecraft_version=1.20.1
-parchment_version=2023.09.03
 
 group_id=net.cerealcamera
 archives_base_name=aviator_dreams
+mod_version=1.0.1
 
 fabric_loader_version=0.15.9
 fabric_api_version=0.83.1+1.20.1
