--- a/forge/src/main/resources/META-INF/mods.toml
+++ b/forge/src/main/resources/META-INF/mods.toml
@@ -10,7 +10,7 @@ displayName = "Aviator Dreams Reloaded"
 displayURL = "https://modrinth.com/mod/aviator-dreams-reloaded"
 authors = "CerealCamera"
 description = "A set of additional aircraft with Create support in mind."
-logoFile = "icon.png"
+logoFile = "/icon.png"
 itemIcon = "aviator_dream:douglas_dc1"
 
 [[dependencies.aviator_dream]]
