--- a/neoforge/neoforge.mods.toml
+++ b/neoforge/neoforge.mods.toml
@@ -6,10 +6,10 @@ license = "GPL-3.0-only"
 [[mods]]
 modId = "aviator_dream"
 version = "${version}"
-displayName = "Aviator Dreams"
+displayName = "Aviator Dreams (Reloaded)"
 displayURL = ""
 authors = "CerealCamera"
-description = "An Add-On aimed at adding real life airliners to the game."
+description = "Realistic aircraft for Immersive Aircraft"
 logoFile = "icon.png"
 itemIcon = "aviator_dream:douglas_dc1"
 
@@ -31,5 +31,5 @@ side = "BOTH"
 modId = "immersive_aircraft"
 mandatory = true
 versionRange = "[1.2.2,)"
-ordering = "NONE"
+ordering = "AFTER"
 side = "BOTH"
