--- a/forge/mods.toml
+++ b/forge/mods.toml
@@ -10,7 +10,7 @@ displayName = "Aviator Dreams Reloaded"
 displayURL = "https://modrinth.com/mod/aviator-dreams-reloaded"
 authors = "CerealCamera"
 description = "Realistic aircraft for Immersive Aircraft"
-logoFile = "/icon.png"
+logoFile = "icon.png"
 itemIcon = "aviator_dream:douglas_dc1"
 
 [[dependencies.aviator_dream]]
