--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,7 @@ subprojects {
         // The following line declares the mojmap mappings, you may use other mappings as well
         mappings loom.officialMojangMappings()
         // The following line declares the yarn mappings you may select this one as well.
-        // mappings "net.fabricmc:yarn:@YARN_MAPPINGS@:v2"
-        modImplementation include("maven.modrinth:ModMenu:11.0.3")
+        // mappings "net.fabricmc:yarn:@YARN_MAPPINGS@:v2
     }
 }
 
@@ -52,17 +51,6 @@ allprojects {
     group = rootProject.group_id
 
     repositories {
-        exclusiveContent {
-            forRepository {
-                maven {
-                    name = "Modrinth"
-                    url = "https://api.modrinth.com/maven"
-                }
-            }
-            filter {
-                includeGroup "maven.modrinth"
-            }
-        }
         maven { url "https://maven.conczin.net/Artifacts" }
         maven { url "https://maven.parchmentmc.org" }
         maven { url "https://maven.terraformersmc.com/releases/" }
