--- a/gradle.properties
+++ b/gradle.properties
@@ -10,6 +10,7 @@ architectury_version=${ARCHITECTURY_API_VERSION}
 
 fabric_loader_version=0.16.14
 fabric_api_version=0.116.4
+mod_menu_version=11.0.3
 
 neoforge_version=21.1.194
 
