--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 minecraft_version=1.21.1
 
-archives_base_name=aviator_dream
 group_id=net.cerealcamera
+archives_base_name=aviator-dreams-reloaded
+mod_version=1.0.3
 
 architectury_version=${ARCHITECTURY_API_VERSION}
 
